ASN.1 PER bitfield dissector problems
This issue was migrated from bug 6473 in our old bug tracker.
Original bug information:
Reporter: Neil Piercy
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: 1.6.2
Attachments:
packet-per.c.diff: Patch to fix padding and bit stitching problems in bitstrings
packet-per.c.diff: Revised patch to fix the problem remaining in trunk and 1.6.3 candidate